--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,23 +2,12 @@
 name = "dlfm"
 version = "0.0.0"
 description = "Multi-convex programming for discrete latent factor models prototyping."
-authors = [
-    {name = "Hao Zhu",email = "zhuh@cs.uni-freiburg.de"}
-]
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "numpy (>=2.2.3,<3.0.0)",
-    "cvxpy (>=1.6.3,<2.0.0)",
-    "matplotlib (>=3.10.0,<4.0.0)",
-    "seaborn (>=0.13.2,<0.14.0)",
-    "scikit-learn (>=1.6.1,<2.0.0)",
-    "jupyter (>=1.1.1,<2.0.0)",
+    "cvxpy>=1.6.4",
+    "matplotlib>=3.10.1",
+    "numpy>=2.2.4",
+    "scikit-learn>=1.6.1",
+    "seaborn>=0.13.2",
 ]
-
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry]
-package-mode = false
